# bundcore

./: Cargo.toml  README.md
src/: bundcore.rs  bundcore_eval.rs  bundcore_run.rs  lib.rs
tests/: bundcore-lambda-test.rs  bundcore-logic-test.rs  bundcore-stackop-test.rs  bundcore-test.rs  bundcore-text-test.rs  dummy-test.rs
